fixed z-index

--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -5,13 +5,13 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: 10;
   }
   
   .slide {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    height:100%;
+    object-fit: cover !important;
   }
   
   .slide-hidden {
