--- a/src/styles/gallery.css
+++ b/src/styles/gallery.css
@@ -3,7 +3,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: orange;
     height: 90vh;
     width: 100vw;
 }
