--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -6,6 +6,8 @@ header{
     padding: 10px 20px;
     backdrop-filter: blur(0.1rem);
     box-shadow: 0 0px 4px rgba(0,0,0,0.9);
+    position: relative;
+    z-index: 1000;
 }
 header nav{
     display: flex;
